--- a/assets/css/_sass/_base.scss
+++ b/assets/css/_sass/_base.scss
@@ -23,10 +23,13 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-size: 2rem;
+  background-color: black;
+  color: white;
 }
 h2 {
   margin-top: 1rem;
   font-size: 1.5rem;
+
 }
 h3 {
   margin-top: 1.5rem;
